--- a/.github/workflows/hoss-test-suite.yml
+++ b/.github/workflows/hoss-test-suite.yml
@@ -1,5 +1,4 @@
-# This workflow runs a specific regression test suite, using the input image
-# name and tag from the workflow call.
+# This workflow runs HOSS regression test suite, using the tag from the workflow call.
 #
 # Required settings in the repository:
 # Environments (exactly the following strings):
@@ -16,14 +15,11 @@
 #
 # Note: A workflow_call event can only have inputs of type boolean, number or
 # string.
-name: Run test suite
+name: Run HOSS test suite
 
 on:
   workflow_call:
     inputs:
-      docker-image-name:
-        required: true
-        type: string
       docker-image-tag:
         required: false
         type: string
@@ -31,19 +27,7 @@ on:
       harmony-environment:
         required: true
         type: string
-  workflow_dispatch:
-    inputs:
-      docker-image-tag:
-        required: false
-        type: string
-        default: 'latest'
-      harmony-environment:
-        required: true
-        type: choice
-        options:
-          - sit
-          - uat
-          - production
+
   repository_dispatch:
     types: [hoss]
     inputs:
@@ -69,31 +53,6 @@ jobs:
 
       - name: Pull Docker image
         run: docker pull ghcr.io/nasa/regression-tests-hoss:${{ github.event.client_payload.docker-image-tag }}
-
-      - name: Execute notebook
-        working-directory: ./test
-        env:
-          EDL_USER: ${{ secrets.EDL_USER }}
-          EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
-          HARMONY_HOST_URL: ${{ vars.HARMONY_HOST_URL }}
-        run: ./run_notebooks.sh hoss
-
-      - name: Save notebook as an artefact
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: notebook-output
-          path: test/output/hoss/Results.ipynb
-
-  run-tests:
-    environment: ${{ inputs.harmony-environment }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Pull Docker image
-        run: docker pull ghcr.io/nasa/regression-tests-hoss:${{ inputs.docker-image-tag }}
 
       - name: Execute notebook
         working-directory: ./test
